ui: settings button layout overflowing fixed

--- a/css/setting_page.css
+++ b/css/setting_page.css
@@ -49,7 +49,7 @@
     width: 600px;
 }
 .setting-menu-item-wrapper.more-link-item {
-    padding: 10px 30px;
+    /* padding: 10px 30px; */
 }
 .setting-menu-item-sub-wrapper {
     display: inline-block;
